Implement /game/[id]
