# main.py
@@ -9,6 +9,7 @@ import json
 
 app = quart_cors.cors(quart.Quart(__name__), allow_origin="https://chat.openai.com")
 
+
 # Keep track of todo's. Does not persist if Python session is restarted.
 # _TODOS = {}
 #
@@ -62,33 +63,43 @@ def get_game_details(appid):
     else:
         return {"error": "Could not retrieve game details"}
 
-@app.get("/game/<int:id>")
+
+@app.route('/game/<int:id>', methods=['GET'])
 async def get_game(id):
     game_data = get_game_details(id)
 
-    print(game_data)
-
     if 'error' not in game_data:
         app_details = game_data[str(id)]['data']
-        mapped_data = {
-            "steam_appid": app_details['steam_appid'],
-            "name": app_details['name'],
-            "categories": app_details['categories'],
-            "developers": app_details['developers'],
-            "publishers": app_details['publishers'],
-            "platforms": app_details['platforms'],
-            "price_overview": app_details['price_overview'],
-            "demos": app_details['demos'],
-            "genres": app_details['genres'],
-            "recommendations": app_details['recommendations'],
-            "achievements": app_details['achievements'],
-        }
+
+        mapped_data = {}
+        keys_to_map = ['steam_appid', 'name', 'developers', 'publishers',
+                       'categories', 'pc_requirements', 'mac_requirements',
+                       'linux_requirements', 'website', 'required_age',
+                       'release_date', 'platforms', 'price_overview',
+                       'demos', 'genres', 'recommendations', 'achievements', 'dlc']
+
+        for key in keys_to_map:
+            if key in app_details:
+                mapped_data[key] = app_details[key]
+
+        if 'achievements' in app_details:
+            mapped_achievements = {
+                'total': app_details['achievements']['total'],
+                'highlighted': [
+                    {'name': ach['name']} for ach in app_details['achievements']['highlighted']
+                ]
+            }
+            mapped_data['achievements'] = mapped_achievements
+
         return jsonify(mapped_data)
     else:
         return jsonify(game_data)
 
+
 def main():
     app.run(debug=True, host="0.0.0.0", port=5003)
+
+
 # https://store.steampowered.com/api/appdetails?appids=57690
 if __name__ == "__main__":
     main()
